; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/gx/extr_gx_audio.c_gx_audio_Shutdown.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/gx/extr_gx_audio.c_gx_audio_Shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Bg_music_ogg = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gx_audio_Shutdown() #0 {
  %1 = call i32 @PauseOgg(i32 1)
  %2 = call i32 (...) @StopOgg()
  %3 = call i32 @ASND_Pause(i32 1)
  %4 = call i32 (...) @ASND_End()
  %5 = load i64, i64* @Bg_music_ogg, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %0
  %8 = load i64, i64* @Bg_music_ogg, align 8
  %9 = call i32 @free(i64 %8)
  br label %10

10:                                               ; preds = %7, %0
  ret void
}

declare dso_local i32 @PauseOgg(i32) #1

declare dso_local i32 @StopOgg(...) #1

declare dso_local i32 @ASND_Pause(i32) #1

declare dso_local i32 @ASND_End(...) #1

declare dso_local i32 @free(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
